[gd_scene load_steps=12 format=3 uid="uid://bae8i062fra5j"]

[ext_resource type="Script" uid="uid://cv7al1w68xhey" path="res://scripts/projectiles/grenade.gd" id="1_7sc21"]
[ext_resource type="Texture2D" uid="uid://60mdt8777lk8" path="res://assets/sprites/weapons/weapons_spritesheet_1.png" id="2_7sc21"]
[ext_resource type="Texture2D" uid="uid://bn650nb8npkda" path="res://assets/sprites/projectiles/explosion.png" id="3_1kmnu"]
[ext_resource type="AudioStream" uid="uid://dujc57mae1msn" path="res://assets/audio/weapons/explosion.wav" id="4_1kmnu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7sc21"]
friction = 10.0
bounce = 0.01
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6hwo"]
size = Vector2(22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuwqu"]
atlas = ExtResource("2_7sc21")
region = Rect2(83, 67, 22, 9)

[sub_resource type="Animation" id="Animation_6dko8"]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrenadeSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667, 0.4, 0.533333, 0.633333, 0.766667, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplosionSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_1kmnu")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7sc21"]
resource_name = "Launch"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explode"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrenadeSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nkl0t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrenadeSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1kmnu"]
_data = {
&"Explode": SubResource("Animation_6dko8"),
&"Launch": SubResource("Animation_7sc21"),
&"RESET": SubResource("Animation_nkl0t")
}

[node name="Grenade" type="RigidBody2D"]
collision_layer = 4
collision_mask = 26
physics_material_override = SubResource("PhysicsMaterial_7sc21")
gravity_scale = 0.0
custom_integrator = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_7sc21")

[node name="GrenadeShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g6hwo")

[node name="GrenadeSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_fuwqu")

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("3_1kmnu")
hframes = 8

[node name="ExplosionPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1kmnu")
}
autoplay = "Launch"

[node name="DestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestructTimer" to="." method="_on_destruct_timer_timeout"]
